# ChessEngineBB

./: .gitignore  CMakeLists.txt  ChessEngineBB.pro  LLVM_build.bat  README.md  bitboard.h  board.cpp  board.h  bugslist.txt  engine.h  evaluate.h  main.cpp  movegen.cpp  movegen.h  position.cpp  position.h  search.cpp  search.h  tests.cpp  tests.h  tt.h  types.h  util.cpp  util.h  zobrist.cpp  zobrist.h
